--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <div class="social-links mt-3 text-center">
           
 <!--           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
+          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
           
-          <a href="tmtvaa@hotmail.com" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="tmtvaa@hotmail.com" class="google-plus"><i class="bx bxl-skype"></i></a>  -->
           <a href="https://www.linkedin.com/in/minhtrieutran/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -87,7 +87,19 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Hi, I am a computer vision researcher working in Postdoctoral Position at Chonnam National
+University, South Korea.
+I obtained a Ph.D. degree in Computer Science from Chonnam National Univesity (South
+Korea) in 2022, advised by Prof. Guee-Sang Lee. I also led a Ministry-level Research Topic
+on Foreign Object Debris Detection in Runway and finished my Master degree in Electronics
+Engineering under the supervision of Dr. Nguyen Thanh Dung and Master of Engineering
+Trinh Hoang Duy at Ho Chi Minh City University of Technology and Education (Vietnam) in
+2018. Before that, I was a Teacher at Vietnam Aviation Academy and participated in some
+projects.
+I am mainly interested in the intersection of machine learning and computer vision to build
+machines that are able to engage in the physical world contributively. Now I am focusing
+on a wide range of topics, including document processing, medical prognosis systems, and
+AI agriculture disease detection.</p>
         </div>
 
         <div class="row">
