--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
         <div class="section-title">
           <h2>About</h2>
           <p>Hi, I am a computer vision researcher working in Postdoctoral Position at Chonnam National
-University, South Korea.
-I obtained a Ph.D. degree in Computer Science from Chonnam National Univesity (South
+University, South Korea. I obtained a Ph.D. degree in Computer Science from Chonnam National Univesity (South
 Korea) in 2022, advised by Prof. Guee-Sang Lee. I also led a Ministry-level Research Topic
 on Foreign Object Debris Detection in Runway and finished my Master degree in Electronics
 Engineering under the supervision of Dr. Nguyen Thanh Dung and Master of Engineering
@@ -107,7 +106,7 @@ AI agriculture disease detection.</p>
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Post-doctoral Researcher</h3>
             <p class="fst-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
@@ -115,18 +114,18 @@ AI agriculture disease detection.</p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>25 August 1994</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>tmtvaa.github.io</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+8210 2175 2182</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>77 Yongbong-ro, Yongbong-dong, Bukgu, Gwangju, South Korea</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>PhD</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>tmtvaa@gmail.com</span></li>
+                 
                 </ul>
               </div>
             </div>
