--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@ Korea) in 2022, advised by Prof. Guee-Sang Lee. I also led a Ministry-level Rese
 on Foreign Object Debris Detection in Runway and finished my Master degree in Electronics
 Engineering under the supervision of Dr. Nguyen Thanh Dung and Master of Engineering
 Trinh Hoang Duy at Ho Chi Minh City University of Technology and Education (Vietnam) in
-2018. Before that, I was a Teacher at Vietnam Aviation Academy and participated in some
-projects.
+2018. Before that, I was a Teacher at Vietnam Aviation Academy.
 I am mainly interested in the intersection of machine learning and computer vision to build
 machines that are able to engage in the physical world contributively. Now I am focusing
 on a wide range of topics, including document processing, medical prognosis systems, and
