--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ AI agriculture disease detection.</p>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>PhD</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Doctor of Philosophy in Computer Science</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>tmtvaa@gmail.com</span></li>
                  
                 </ul>
@@ -139,10 +139,10 @@ AI agriculture disease detection.</p>
     <section id="facts" class="facts">
       <div class="container">
 
-        <div class="section-title">
+<!--         <div class="section-title">
           <h2>Facts</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
+        </div> -->
 
         <div class="row no-gutters">
 
