--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ AI agriculture disease detection.</p>
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="61" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Citations</strong> consequuntur quae</p>
+              <p><strong>Citations</strong> </p>
             </div>
           </div>
 
@@ -159,7 +159,7 @@ AI agriculture disease detection.</p>
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="21" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Research Papers</strong> adipisci atque cum quia aut</p>
+              <p><strong>Research Papers</strong> t</p>
             </div>
           </div>
 
