--- a/index.html
+++ b/index.html
@@ -140,9 +140,8 @@ AI agriculture disease detection.</p>
       <div class="container">
 
       <div class="section-title">
-          <h2>Resume</h2>
-          <p><a href="https://drive.google.com/file/d/146yU8DiirTJCPHv7od-tmVlb1SWxAPug/view?usp=sharing" class="btn btn-outline-primary">Download
-                        CV</a></p>
+          <h2>Publications</h2>
+
         </div> 
 
         <div class="row no-gutters">
@@ -256,7 +255,8 @@ AI agriculture disease detection.</p>
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                   <p><a href="https://drive.google.com/file/d/146yU8DiirTJCPHv7od-tmVlb1SWxAPug/view?usp=sharing" class="btn btn-outline-primary">Download
+                        CV</a></p>
         </div>
 
         <div class="row">
