--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ AI agriculture disease detection.</p>
         <div class="row no-gutters">
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-            <div class="count-box">
+            <div class="citeicon">
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="61" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Citations</strong> </p>
@@ -155,7 +155,7 @@ AI agriculture disease detection.</p>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="count-box">
+            <div class="papericon">
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="21" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Research Papers</strong> t</p>
