--- a/index.html
+++ b/index.html
@@ -135,13 +135,14 @@ AI agriculture disease detection.</p>
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Facts Section ======= -->
+       <!-- ======= Facts Section ======= -->
     <section id="facts" class="facts">
       <div class="container">
 
-      <div class="section-title">
+        <div class="section-title">
           <h2>Publications</h2>
-        </div> 
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        </div>
 
         <div class="row no-gutters">
 
@@ -149,23 +150,32 @@ AI agriculture disease detection.</p>
             <div class="citeicon">
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="61" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Citations</strong> </p>
+              <p><strong>Citations</strong> consequuntur quae</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="papericon">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="201" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Research Papers</strong> </p>
+              <span data-purecounter-start="0" data-purecounter-end="21" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Papers</strong> adipisci atque cum quia aut</p>
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
+            <div class="patenticon">
+              <i class="bi bi-headset"></i>
+              <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Coppyright</strong> aut commodi quaerat</p>
+            </div>
+          </div>
 
+   
 
         </div>
 
-   </section><!-- End Facts Section -->
+      </div>
+    </section><!-- End Facts Section -->
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
