--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@ AI agriculture disease detection.</p>
               <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Coppyright</strong> aut commodi quaerat</p>
             </div> 
+            </div> 
+          </div> 
 
         
 
