--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ AI agriculture disease detection.</p>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
+<!--           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="bi bi-headset"></i>
               <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
@@ -176,7 +176,7 @@ AI agriculture disease detection.</p>
               <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
