--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ AI agriculture disease detection.</p>
         </div>
 
         <div class="row no-gutters">
-
+<!-- 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="citeicon">
               <i class="bi bi-emoji-smile"></i>
@@ -160,7 +160,7 @@ AI agriculture disease detection.</p>
               <span data-purecounter-start="0" data-purecounter-end="21" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Papers</strong> </p>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
