--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ AI agriculture disease detection.</p>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="citeicon">
-              <i class="bi bi-headset"></i>
+              <i class="citeicon"></i>
               <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Citations</strong></p>
             </div>
@@ -172,7 +172,7 @@ AI agriculture disease detection.</p>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="papericon">
-              <i class="bi bi-people"></i>
+              <i class="papericon"></i>
               <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Papers</strong></p>
             </div>
