--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ AI agriculture disease detection.</p>
 
         <div class="section-title">
           <h2>Publications</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p></p>
         </div>
 
         <div class="row no-gutters">
@@ -162,7 +162,7 @@ AI agriculture disease detection.</p>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
+          <div class="patenticon" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="patenticon"></i>
               <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
