--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ AI agriculture disease detection.</p>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Doctor of Philosophy in Computer Science</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>PhD</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>tmtvaa@gmail.com</span></li>
                  
                 </ul>
@@ -135,48 +135,48 @@ AI agriculture disease detection.</p>
       </div>
     </section><!-- End About Section -->
 
-         <!-- ======= Facts Section ======= -->
+    <!-- ======= Facts Section ======= -->
     <section id="facts" class="facts">
       <div class="container">
 
         <div class="section-title">
-          <h2>Publications</h2>
-          <p></p>
+          <h2>Facts</h2>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row no-gutters">
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
-              <i class="citeicon"></i>
+              <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Citations</strong></p>
+              <p><strong>Happy Clients</strong> consequuntur quae</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
-              <i class="papericon"></i>
+              <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Papers</strong></p>
+              <p><strong>Projects</strong> adipisci atque cum quia aut</p>
             </div>
           </div>
 
-          <div class="patenticon" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
-              <i class="patenticon"></i>
+              <i class="bi bi-headset"></i>
               <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Copyright</strong></p>
+              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
             </div>
           </div>
 
-<!--           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
               <i class="bi bi-people"></i>
               <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
             </div>
-          </div> -->
+          </div>
 
         </div>
 
@@ -255,8 +255,7 @@ AI agriculture disease detection.</p>
 
         <div class="section-title">
           <h2>Resume</h2>
-                   <p><a href="https://drive.google.com/file/d/146yU8DiirTJCPHv7od-tmVlb1SWxAPug/view?usp=sharing" class="btn btn-outline-primary">Download
-                        CV</a></p>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
