--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ AI agriculture disease detection.</p>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
-              <i class="bi citeicon"></i>
+              <i class="bi bi-citeicon"></i>
               <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Happy Clients</strong> consequuntur quae</p>
             </div>
