--- a/index.html
+++ b/index.html
@@ -167,14 +167,14 @@ AI agriculture disease detection.</p>
 
       </div>
     </section><!-- End Facts Section -->
-
-    <!-- ======= Skills Section ======= -->
+<!-- 
+    ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container">
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p></p>
         </div>
 
         <div class="row skills-content">
@@ -182,7 +182,7 @@ AI agriculture disease detection.</p>
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">Python <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -232,8 +232,12 @@ AI agriculture disease detection.</p>
         </div>
 
       </div>
-    </section><!-- End Skills Section -->
+    </section><!-- End Skills Section
+ -->
 
+
+
+    
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container">
