--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ AI agriculture disease detection.</p>
                       <p class="mb-2">Operating Systems</p>
                     
                       <div class="progress">
-                          <span class="skill"><i class="fab fa-windows fa-2x mr-2"></i>Linux<i
+                          <span class="skill"><i class="fab fa-linux fa-2x mr-2"></i>Linux<i
                                   class="val">80%</i></span>
                           <div class="progress-bar-wrap">
                               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
@@ -218,10 +218,10 @@ AI agriculture disease detection.</p>
                       </div>
 
                       <div class="progress">
-                          <span class="skill"><i class="fab fa-linux fa-2x mr-2"></i>Windows<i
-                                  class="val">80%</i></span>
+                          <span class="skill"><i class="fab fa-window fa-2x mr-2"></i>Windows<i
+                                  class="val">70%</i></span>
                           <div class="progress-bar-wrap">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                   aria-valuemax="100"></div>
                           </div>
                       </div>
@@ -243,9 +243,9 @@ AI agriculture disease detection.</p>
 
                       <div class="progress">
                           <span class="skill"><i class="far fa-file-alt fa-2x mr-2"></i>Latex<i
-                                  class="val">90%</i></span>
+                                  class="val">70%</i></span>
                           <div class="progress-bar-wrap">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                   aria-valuemax="100"></div>
                           </div>
                       </div>
@@ -262,9 +262,9 @@ AI agriculture disease detection.</p>
                       </div>
 
                       <div class="progress">
-                          <span class="skill">English<i class="val">Pre-advanced</i></span>
+                          <span class="skill">English<i class="val">Good</i></span>
                           <div class="progress-bar-wrap">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0"
+                              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                                   aria-valuemax="100"></div>
                           </div>
                       </div>
