--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ AI agriculture disease detection.</p>
 
 
                <div class="col-lg-4" data-aos="fade-up">
-                      <p class="mb-2">Operating Systems</p>
+                      <p class="mb-2">OS</p>
                     
                       <div class="progress">
                           <span class="skill"><i class="fab fa-linux fa-2x mr-2"></i>Linux<i
@@ -283,72 +283,153 @@ AI agriculture disease detection.</p>
       </div>
   </section><!-- End Skills Section -->
 
-    
-    <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
-      <div class="container">
+     <!-- ======= Resume Section ======= -->
+        <section id="resume" class="resume section-bg">
+            <div class="container">
 
-        <div class="section-title">
-          <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
+                <div class="section-title">
+                    <h2>Resume</h2>
+                    <a href="https://ngochuynhho.github.io/cv/cv_onepage.pdf"
+                        class="btn btn-outline-primary">Download
+                        CV</a>
+                </div>
 
-        <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Alex Smith</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
-            </div>
+                <div class="row">
 
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-            </div>
-            <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-            </div>
-          </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
-            </div>
-          </div>
-        </div>
+                    <div class="col-lg-6" data-aos="fade-up">
+                        <h3 class="resume-title">Education</h3>
+                        <div class="resume-item">
+                            <h4>PhD in AI Convergence</h4>
+                            <h5>2017 - 2021</h5>
+                            <p><em>Chonnam National University</em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>Gwangju, S. Korea
+                            </p>
+                            <p>
+                                “A Study on Prediction of Alzheimer’s Disease Progression Using Bidirectional-Progressive Recurrent Networks”.
+                                2020.
+                            </p>
+                        </div>
+                        <div class="resume-item">
+                            <h4>MS in Electrical Engineering</h4>
+                            <h5>2015 - 2017</h5>
+                            <p><em>Kookmin University</em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>Seoul,
+                                S. Korea
+                            </p>
+                            <p>
+                                “Distance Estimation Considering Varying Walking Speed for Smartphone PDR Using Adaptive Step-Length Estimation”.
+                                2016
+                            </p>
+                        </div>
+                        <div class="resume-item">
+                            <h4>BE in Telecommunications</h4>
+                            <h5>2010 - 2015</h5>
+                            <p><em>Hochiminh City University of Technology</em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>Hochiminh,
+                                Vietnam
+                            </p>
+                            <p>
+                                “Impact of Channel Estimation Error on the Performance of Relay Selection in Cognitive Radio Networks”. 2014
+                            </p>
+                        </div>
+                    </div>
 
-      </div>
-    </section><!-- End Resume Section -->
+                    <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+                        <h3 class="resume-title">Professional Experience</h3>                        
+                        <div class="resume-item">
+                            <h4>Post-doctoral Research Fellow</h4>
+                            <h6><i class="fas fa-building"></i> Chonnam National University
+                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>Gwangju, S. Korea</em>
+                            </h6>
+                            <h5>2021-Current</h5>
+                            <ul>
+                                <li>Development of DL model to predict the progression of Alzheimer's Disease;</li>
+                                <li>Development of DL model to recognize human emotion from multiple modalities
+                                    (visual, audio, text, neuro-physiological signals, persionality, etc.) and social interaction context. </li>
+                            </ul>
+                        </div>
+                        <div class="resume-item">
+                            <h4>Teaching Assistant</h4>
+                            <h6><i class="fas fa-building"></i> Chonnam National University
+                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>Gwangju, S. Korea</em>
+                            </h6>
+                            <h5>2021-2023</h5>
+                            <ul>
+                                <li>Supporting and evaluating students in class Advanced Project for AI Convergence.</li>
+                            </ul>
+                        </div>
+                        <div class="resume-item">
+                            <h4>Research Assistant</h4>
+                            <h6><i class="fas fa-building"></i> Chonnam National University
+                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>Gwangju, S. Korea</em>
+                            </h6>
+                            <h5>2020 (5 months)</h5>
+                            <ul>
+                                <li>Research and analyze the applications of AI in enhancing the security of biometrics authentication;</li>
+                                <li>Research on context-based emotion recognition in the wild.</li>
+                            </ul>
+                        </div>
+                        <div class="resume-item">
+                            <h4>Research Visit</h4>
+                            <h6><i class="fas fa-building"></i> University of Oulu
+                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>Oulu, Finland</em>
+                            </h6>
+                            <h5>2019 (2 weeks)</h5>
+                            <ul>
+                                <li>Visiting the Center for Machine Vision and Signal Analysis at the University of Oulu to learn the professional working environment here.</li>
+                                <li>Discussing and sharing opinions about current trend on emotion recognition topics using ML/DL;</li>                                
+                            </ul>
+                        </div>
+                        <div class="resume-item">
+                            <h4>Teaching Assistant</h4>
+                            <h6><i class="fas fa-building"></i> Chonnam National University
+                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>Gwangju, S. Korea</em>
+                            </h6>
+                            <h5>2018 (4 months)</h5>
+                            <ul>
+                                <li>Conduct necessary exercises of Data Structures course;</li>
+                                <li>Provide an overall understanding of the data structures as well as an understanding of the classroom process;</li>
+                                <li>Directly identify students' problems and help them to understand concepts and tools for working with data and 
+                                    have experience in analyzing real data.</li>
+                            </ul>
+                        </div>
+                        <div class="resume-item">
+                            <h4>Research Assistant</h4>
+                            <h6><i class="fas fa-building"></i> Kookmin University
+                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>Seoul, S. Korea</em>
+                            </h6>
+                            <h5>2015 (6 months)</h5>
+                            <ul>
+                                <li>Working as a researcher in Smart Embedded System Lab (SESL);</li>
+                                <li>Doing a project of LED-color display through audio jack communication.</li>
+                            </ul>
+                        </div>
+                        <h3 class="resume-title">Outreach</h3>
+                        <div class="resume-item">
+                            <h4>Sport Festival</h4>
+                            <h6><i class="fas fa-building"></i> Vietnamese Student Association in Korea
+                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>S. Korea</em>
+                            </h6>
+                            <h5>2015-2016-2018</h5>
+                            <ul>
+                                <li>Participating an annual sport festival hold by the Vietnamese Students’ Association in Korea
+                                    (VSAK) to have a meet, communication and solidarity of student community.</li>
+                            </ul>
+                        </div>
+                        <div class="resume-item">
+                            <h4>Spring Intership</h4>
+                            <h6><i class="fas fa-building"></i> Southern Power Information Technology Company
+                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>Hochiminh, Vietnam</em>
+                            </h6>
+                            <h5>2014 (3 months)</h5>
+                            <ul>
+                                <li>Learning about the organizational structure of the IT company;</li>
+                                <li>Using devices in server room and deployment of software applications using C-sharp.</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
