--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ AI agriculture disease detection.</p>
 
                 <div class="section-title">
                     <h2>Resume</h2>
-                    <a href="https://ngochuynhho.github.io/cv/cv_onepage.pdf"
+                    <a href="https://drive.google.com/file/d/146yU8DiirTJCPHv7od-tmVlb1SWxAPug/view?usp=sharing"
                         class="btn btn-outline-primary">Download
                         CV</a>
                 </div>
@@ -299,34 +299,32 @@ AI agriculture disease detection.</p>
                     <div class="col-lg-6" data-aos="fade-up">
                         <h3 class="resume-title">Education</h3>
                         <div class="resume-item">
-                            <h4>PhD in AI Convergence</h4>
-                            <h5>2017 - 2021</h5>
-                            <p><em>Chonnam National University</em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>Gwangju, S. Korea
+                            <h4>PhD in Computer Science</h4>
+                            <h5>2018 - 2022</h5>
+                            <p><em>Chonnam National University</em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>South Korea
                             </p>
                             <p>
-                                “A Study on Prediction of Alzheimer’s Disease Progression Using Bidirectional-Progressive Recurrent Networks”.
+                                “Overall Survival Prediction in Glioblastoma Patients via Local Context of Brain Tumor MRI”.
                                 2020.
                             </p>
                         </div>
                         <div class="resume-item">
-                            <h4>MS in Electrical Engineering</h4>
+                            <h4>MS in Electronic Engineering</h4>
                             <h5>2015 - 2017</h5>
-                            <p><em>Kookmin University</em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>Seoul,
-                                S. Korea
+                            <p><em> University of Technology and Education </em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>Vietnam
                             </p>
                             <p>
-                                “Distance Estimation Considering Varying Walking Speed for Smartphone PDR Using Adaptive Step-Length Estimation”.
-                                2016
+                                “Foreign Object Debris (FOD) Detection for Aviation via Image Processing Technology”.
+                                2018
                             </p>
                         </div>
                         <div class="resume-item">
-                            <h4>BE in Telecommunications</h4>
-                            <h5>2010 - 2015</h5>
-                            <p><em>Hochiminh City University of Technology</em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>Hochiminh,
-                                Vietnam
+                            <h4>BE in Electronics and Telecommunications Engineering</h4>
+                            <h5>2012 - 2016</h5>
+                            <p><em>Vietnam Aviation Academy</em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>Vietnam
                             </p>
                             <p>
-                                “Impact of Channel Estimation Error on the Performance of Relay Selection in Cognitive Radio Networks”. 2014
+                                “Face Recognition and License Plate Detection for Smart Parking”. 2016
                             </p>
                         </div>
                     </div>
