--- a/index.html
+++ b/index.html
@@ -352,6 +352,17 @@ AI agriculture disease detection.</p>
                                 <li>Supporting and evaluating students in class Advanced Project for AI Convergence.</li>
                             </ul>
                         </div>
+
+                             <div class="resume-item">
+                            <h4>National Project</h4>
+                            <h6><i class="fas fa-building"></i> Vietnam Aviation Academy
+                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>Vietnam</em>
+                            </h6>
+                            <h5>2017-2021</h5>
+                            <ul>
+                                <li>Ministry-level Research Topic on Foreign Object Debris Detection in Runway.</li>
+                            </ul>
+                        </div>
                        
                     </div>
 
