--- a/index.html
+++ b/index.html
@@ -299,17 +299,17 @@ AI agriculture disease detection.</p>
                     <div class="col-lg-6" data-aos="fade-up">
                         <h3 class="resume-title">Education</h3>
                         <div class="resume-item">
-                            <h4>PhD in Computer Science</h4>
+                            <h4>Doctor of Philosophy in Computer Science</h4>
                             <h5>2018 - 2022</h5>
                             <p><em>Chonnam National University</em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>--South Korea
                             </p>
                             <p>
                                 “Overall Survival Prediction in Glioblastoma Patients via Local Context of Brain Tumor MRI”.
-                                2020.
+                                2022.
                             </p>
                         </div>
                         <div class="resume-item">
-                            <h4>MS in Electronic Engineering</h4>
+                            <h4>Master in Electronic Engineering</h4>
                             <h5>2016 - 2018</h5>
                             <p><em> University of Technology and Education </em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>--Vietnam
                             </p>
@@ -319,7 +319,7 @@ AI agriculture disease detection.</p>
                             </p>
                         </div>
                         <div class="resume-item">
-                            <h4>BE in Electronics and Telecommunications Engineering</h4>
+                            <h4>Bachelor in Electronics and Telecommunications Engineering</h4>
                             <h5>2012 - 2016</h5>
                             <p><em>Vietnam Aviation Academy</em><i class="ml-2 fas fa-map-marker-alt mr-1"></i>--Vietnam
                             </p>
@@ -345,7 +345,7 @@ AI agriculture disease detection.</p>
                         <div class="resume-item">
                             <h4>Teaching Assistant</h4>
                             <h6><i class="fas fa-building"></i> Chonnam National University
-                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>South Korea</em>
+                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>--South Korea</em>
                             </h6>
                             <h5>2020-2022</h5>
                             <ul>
@@ -356,7 +356,7 @@ AI agriculture disease detection.</p>
                              <div class="resume-item">
                             <h4>National Project</h4>
                             <h6><i class="fas fa-building"></i> Vietnam Aviation Academy
-                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>Vietnam</em>
+                                <i class="ml-2 fas fa-map-marker-alt mr-1"></i><em>--Vietnam</em>
                             </h6>
                             <h5>2017-2021</h5>
                             <ul>
