--- a/index.html
+++ b/index.html
@@ -88,16 +88,15 @@
         <div class="section-title">
           <h2>About</h2>
           <p>Hi, I am a computer vision researcher working in Postdoctoral Position at Chonnam National
-University, South Korea. I obtained a Ph.D. degree in Computer Science from Chonnam National Univesity (South
-Korea) in 2022, advised by Prof. Guee-Sang Lee. I also led a Ministry-level Research Topic
-on Foreign Object Debris Detection in Runway and finished my Master degree in Electronics
-Engineering under the supervision of Dr. Nguyen Thanh Dung and Master of Engineering
-Trinh Hoang Duy at Ho Chi Minh City University of Technology and Education (Vietnam) in
-2018. Before that, I was a Teacher at Vietnam Aviation Academy.
-I am mainly interested in the intersection of machine learning and computer vision to build
-machines that are able to engage in the physical world contributively. Now I am focusing
-on a wide range of topics, including document processing, medical prognosis systems, and
-AI agriculture disease detection.</p>
+            University, South Korea. I obtained a Ph.D. degree in Computer Science from Chonnam National Univesity (South 
+            Korea) in 2022, advised by Prof. Guee-Sang Lee. I achieved Master degree in Electronics
+            Engineering under the supervision of Dr. Nguyen Thanh Dung and Master of Engineering
+            Trinh Hoang Duy at the University of Technology and Education (Vietnam) in
+            2018. Before that, I was a Teacher at Vietnam Aviation Academy.
+            I am mainly interested in the intersection of machine learning and computer vision to build
+            machines that can engage in the physical world contributively. Now I am focusing
+            on a wide range of topics, including document processing, medical prognosis systems, and
+            AI agriculture disease detection.</p>
         </div>
 
         <div class="row">
@@ -371,6 +370,60 @@ AI agriculture disease detection.</p>
             </div>
         </section><!-- End Resume Section -->
 
+ <!-- ======= Projects Section ======= -->
+        <section id="projects" class="services section-bg">
+            <div class="container">
+
+                <div class="section-title">
+                    <h2>Projects</h2>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+                        <div class="icon"><i class="icofont-chart-line"></i></div>
+                        <h4 class="title">Disease’s Progression Prediction</h4>
+                        <p class="description">
+                            <a target="_blank">Modelling the progression of long-term disease | </a>
+                            <!-- <a href="https://www.youtube.com/watch?v=5XkSoCVYRNA" target="_blank">YouTube</a> -->
+                        </p>
+                    </div>
+                    <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+                        <div class="icon"><i class="icofont-brain-alt"></i></div>
+                        <h4 class="title">Alzheimer’s Disease (AD) Detection</h4>
+                        <p class="description">
+                            <a target="_blank">Predicting the status of AD : NC, MCI, and AD dementia |</a>
+                            <a href="https://www.youtube.com/watch?v=5XkSoCVYRNA" target="_blank">YouTube</a>
+                        </p>
+                    </div>
+                    <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+                        <div class="icon"><i class="icofont-operation-theater"></i></div>
+                        <h4 class="title">Bone Tumor Detection</h4>
+                        <p class="description">
+                            <a target="_blank">Detecting the status of bone tumor from radiographics | </a>
+                            <a href="https://www.youtube.com/watch?v=w9sntPA24XQ"
+                                target="_blank">YouTube</a>
+                        </p>
+                    </div>
+                    <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+                        <div class="icon"><i class="icofont-wink-smile"></i></div>
+                        <h4 class="title">Multimodal Emotion Recognition</h4>
+                        <p class="description">
+                            <a target="_blank">Identifying human emotional states from multi-source media:
+                                visual, audio, text, and neuro-physiology | </a>
+                        </p>
+                    </div>
+                    <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+                        <div class="icon"><i class="icofont-location-arrow"></i></div>
+                        <h4 class="title">Indoor Human Localization</h4>
+                        <p class="description">
+                            <a target="_blank">Estimating human walking steps using a smartphone for PDR | </a>
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </section><!-- End Projects Section -->
+    
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
