--- a/index.html
+++ b/index.html
@@ -168,10 +168,7 @@
                         <h3 class="mb-0">PhD Thesis</h3>
                         <ol>
                             <li>
-                                Ngoc-Huynh HO. <br>“A Study on Prediction of Alzheimer's Disease Progression Using Bidirectional-Progressive Recurrent Networks”.
-                                Presented
-                                10
-                                Dec 2020.
+                                Tran Minh Trieu. <br>“Overall Survival Prediction in Glioblastoma Patients via Local Context of Brain Tumor MRI”. Presented 2 June 2022.
                             </li>
                         </ol>
                     </div>
@@ -179,28 +176,14 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
-                        <h3 class="mb-0">Korean Patents</h3>
+                        <h3 class="mb-0">Korean Copyright</h3>
                         <ol>
                             <li>
                                 HJ Yang, <b>NH Ho</b>, G Lee, SH Kim. <br>“<em>User emotion prediction system and method using deep learning-based graph fusion</em>”.
                                 (March 09, 2023). DOI: <a href="https://doi.org/10.8080/1020210117086?urlappend=en">
                                     10-2023-0034012.</a>
                             </li>
-                            <li>
-                                HJ Yang, <b>NH Ho</b>, Jahae Kim. <br>“<em>A system and method for predicting progression of Alzheimer's Disease based on a Two-way network</em>”.
-                                (April 27, 2021). DOI: <a href="https://doi.org/10.8080/1020210054161?urlappend=en">
-                                    10-2019-0002323.</a>
-                            </li>    
-                            <li>
-                                HJ Yang, SH Kim, G Lee, <b>NH Ho</b>. <br>“<em>Voice emotion recognition method and system</em>”.
-                                (February 23, 2021). DOI: <a href="https://doi.org/10.8080/1020190024090?urlappend=en">
-                                    10-2019-0004760.</a>
-                            </li> 
-                            <li>
-                                HJ Yang, SH Kim, ST Jung, SD Joo, <b>NH Ho</b>, DS Tran. <br>“<em>System for detecting bone tumour</em>”.
-                                (January 7, 2021). DOI: <a href="https://doi.org/10.8080/1020190002323?urlappend=en">
-                                    10-2019-0002323.</a>
-                            </li>                                            
+                           Binarization of music score with complex background by deep convolutional neural networks. Registration of copyright number 206371-0001063, Korea 2021.
                         </ol>
                     </div>
                 </div>
