--- a/index.html
+++ b/index.html
@@ -179,11 +179,9 @@
                         <h3 class="mb-0">Korean Copyright</h3>
                         <ol>
                             <li>
-                                HJ Yang, <b>NH Ho</b>, G Lee, SH Kim. <br>“<em>User emotion prediction system and method using deep learning-based graph fusion</em>”.
-                                (March 09, 2023). DOI: <a href="https://doi.org/10.8080/1020210117086?urlappend=en">
-                                    10-2023-0034012.</a>
+                                <b>Minh-Trieu Tran</b>, Guee-Sang Lee. <br>“<em> Binarization of music score with complex background by deep convolutional neural networks.
+                                  </em>”. Registration of copyright number 206371-0001063, Korea 2021. </a>
                             </li>
-                           Binarization of music score with complex background by deep convolutional neural networks. Registration of copyright number 206371-0001063, Korea 2021.
                         </ol>
                     </div>
                 </div>
